app/assets/stylesheets/pages/_lecture.scss
.lecture-legend {
  font-size: 15px;
  text-align: right;
}

.lecture-content h1 {
  font-size: 30px;
  color: $greydark;
  text-align: center;
  border-bottom: 2px solid $greydark;
  padding: 0px 20% 20px 20%;
}

.lecture-content hr {
  border-top: 2px solid $greydark;
}

.lecture-content h2 {
  font-size: 26px;
  color: #333333;
  margin: 20px 0px 0px 0px;
  border-top: 2px solid #333333;
  padding-top: 20px;
}

.lecture-content cite {
  font-style: italic;
  text-decoration: underline;
}

.lecture-content q {
  font-family: 'Garamond';
  font-style: normal;
  quotes: none;
  color: #555555;
  font-weight: 100;
  }

.lecture-content bq {
  font-family: 'Garamond';
  font-style: normal;
  quotes: none;
  color: #555555;
  font-weight: 100;
  }

.lecture-content h3 {
  font-size: 18px;
  color: $greydark;
  margin: 10px 0px -20px 0px;
  text-shadow: 1px 0px 0px $greydark;
}

.lecture-wrapper {
  padding-top : 70px;
  min-height: 800px;
}

.lecture-menu {
  // height: 100vh;
  margin-top: 80px;
}

.lecture-menu ul {
  list-style-type: none;
}

.lecture-content {
  background-color: $greylight;
  margin-left: 10px;
  min-height: 400px;
  padding: 40px;
  border-radius: 0 6px 6px 6px;
  display: inline-block;
  width: 100%;
  margin-bottom: 20px;
}

.lecture-documents {
  display: none;
}

.lecture-discussion {
  width: 90%;
  min-height: 100px;
  position: relative;
  padding: 14px 14px 52px 108px;
  margin: 0px 0px 20px 5%;
  background-color: #f6f6f6;
  border-radius: 6px;
  word-wrap : break-word;

  .list-image
  {
    position: absolute;
    left: 14px;
    top: 14px;
  }
}

.lecture-subcomment {
  width: 85%;
  min-height: 100px;
  position: relative;
  padding: 14px 14px 52px 108px;
  margin: -14px 0px 20px 10%;
  background-color: #f6f6f6;
  border-radius: 6px;
  word-wrap : break-word;

  .list-image
  {
    position: absolute;
    left: 14px;
    top: 14px;
  }
}

input[type=submit] {
  color: white;
  background-color: #bbbbbb;
  border: none;
  border-radius: 4px;
  font-size: 14px;
  padding: 2px 14px 0px;
  line-height: normal;
  position: absolute;
  right: 14px;
  bottom: 14px;

  &:hover {
    box-shadow: 0 0 6px rgba(0, 0, 0, 3);
  }
}

.lecture-form{
  width: 100%;
  height: 60px;
  max-height: 60px;
  outline-color: $technique;
}

a li.lecture-link.active {
  text-decoration: none;
  font-weight: bolder;
  background-color: $greylighter;
  font-size: 16px;
  padding-left: 0px;
  margin-left: -10px;
}

a li.lecture-link {
  text-decoration: none;
  font-size: 16px;
  padding-left: 0px;
  margin-left: -10px;
}

ul a:link {
  border:0!important;
  text-decoration: none !important;
}

.lecture-link:hover {
  background-color: $greywhite;
}

.lecture-video {
  margin: 20px 0px 20px 10px;
  border: 1px solid black;
}

.lecture-vignette {
  @extend .lecture-video;
  position: relative;
  cursor: pointer;
  display: flex;
  align-items: center;
}

.lecture-cover {
  position: absolute;
  top: 10%;
  height: 80%;
  margin-left: 6%;
  border-radius: 4px;
  border: 1px solid black;
}

.lecture-title {
  position: absolute;
  margin-left: 44%;
  top: 33%;
  margin-right: 10%;
  font-size: 36px;
}

.lecture-title-xs {
  position: absolute;
  margin-left: 44%;
  top: 33%;
  margin-right: 10%;
  font-size: 20px;
}

.lecture-icon {
  position: absolute;
  top: calc(50% - 24px);
  left: calc(50% - 38px);
  width: 68px;
  height: 48px;
  opacity: 0.80;
}

.lecture-note {
  position: absolute;
  top: 20px;
  right: 20px;
  color: $orange;
}

.lecture-retour {
  margin-top: 20px;
  color: $greydark;
  background-color: $greywhite;
  font-size: 18px;
  text-align: center;
  padding: 15px 15px 0px 15px;
}

.lecture-retour:hover {
  background-color: $greylight;
  -webkit-transition: background-color 100ms linear;
  -moz-transition: background-color 100ms linear;
  -o-transition: background-color 100ms linear;
  -ms-transition: background-color 100ms linear;
  transition: background-color 100ms linear;
  text-decoration : none;
}


#lecture-admin {
  color: white;
  background-color: #111111;
  border: none;
  border-radius: 4px;
  font-size: 14px;
  padding: 2px 14px 0px;
  line-height: normal;
  position: absolute;
  right: 15px;
  top: -10px;

    &:hover {
      background-color: $greydark;
      -webkit-transition: background-color 100ms linear;
      -moz-transition: background-color 100ms linear;
      -o-transition: background-color 100ms linear;
      -ms-transition: background-color 100ms linear;
      transition: background-color 100ms linear;
      text-decoration : none;
  }
}

#document-admin {
  color: white;
  background-color: #111111;
  border: none;
  border-radius: 4px;
  font-size: 14px;
  padding: 2px 14px 0px;
  line-height: normal;
  position: absolute;
  right: 60px;
  top: 100px;

    &:hover {
      background-color: $greydark;
      -webkit-transition: background-color 100ms linear;
      -moz-transition: background-color 100ms linear;
      -o-transition: background-color 100ms linear;
      -ms-transition: background-color 100ms linear;
      transition: background-color 100ms linear;
      text-decoration : none;
  }
}

/* Bubble Left */
.hvr-bubble-left {
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: translateZ(0);
  transform: translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  -moz-osx-font-smoothing: grayscale;
  position: relative;
}


/* Bubble DOWN */
.hvr-bubble-down {
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: translateY(0);
  transform: translateY(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  -moz-osx-font-smoothing: grayscale;
  position: relative;
}

